# rust-sdk

./: .editorconfig  .pre-commit-config.yaml  .rust-toolchain.toml  Cargo.toml  README.md  crates.js  flake.nix  help.html  search-index.js  settings.html  src-files.js
.cursor/rules/: coding-guidelines.mdc
.github/workflows/: demo.yml  example.yml  fmt-clippy.yml  test_api.sh
.github/workflows/setup/: action.yml
api/: Cargo.toml
api/src/: api.rs  main.rs
better-docs/: search-index.js
better-docs/src/golem_base_sdk/: lib.rs.html
better-nonces-management/golem_base_sdk/: all.html  index.html
better-nonces-management/golem_base_sdk/client/: index.html  struct.GolemBaseClient.html  struct.NonceManager.html
better-nonces-management/golem_base_sdk/eth/: constant.STORAGE_ADDRESS.html  enum.Error.html  index.html
better-nonces-management/src/golem_base_sdk/: client.rs.html  eth.rs.html
cli/: Cargo.toml  README.md
cli/src/: main.rs
contributing/golem_base_sdk/account/: index.html  struct.TransactionChannel.html
contributing/golem_base_sdk/client/: index.html
contributing/search.desc/golem_base_sdk/: golem_base_sdk-desc-0-.js
demo/: Cargo.toml
demo/src/: main.rs
eureka-cpu/19/: help.html  search-index.js  settings.html  src-files.js
eureka-cpu/19/golem_base_sdk/: struct.Signature.html  struct.Url.html
eureka-cpu/19/golem_base_sdk_api/: all.html  fn.main.html  index.html  struct.Cli.html
eureka-cpu/19/golem_base_sdk_demo/: fn.log_num_of_entities_owned.html  fn.main.html
eureka-cpu/19/golem_base_test_utils/: constant.GOLEM_BASE_WS_URL.html  constant.TEST_TTL.html  fn.get_client.html
eureka-cpu/22/golem_base_sdk/: index.html
eureka-cpu/22/golem_base_sdk_demo/: all.html
eureka-cpu/22/golem_base_test_utils/: fn.get_client.html  sidebar-items.js
eureka-cpu/create-wallet/: search-index.js
eureka-cpu/create-wallet/golem_base_sdk/: index.html  struct.Signature.html
eureka-cpu/create-wallet/golem_base_sdk_demo/: fn.main.html  (+2 more)
eureka-cpu/update-client-entity-docs/: search-index.js
example/: Cargo.toml
example/src/: main.rs
examples/: cli.rs  golem_base_example.rs  offer.json  yagna_interaction.rs
fix-tests/golem_base_sdk/: all.html  index.html  struct.Url.html
golem_base_sdk/: all.html  fn.keccak256.html  index.html  sidebar-items.js  struct.Address.html  struct.Signature.html  struct.Url.html  type.PrivateKeySigner.html
golem_base_sdk/account/: constant.GOLEM_BASE_STORAGE_PROCESSOR_ADDRESS.html  fn.get_receipt.html  fn.golem_base_storage_entity_btl_extended.html  index.html  sidebar-items.js  struct.Account.html  struct.TransactionChannel.html
golem_base_sdk/client/: index.html  sidebar-items.js  struct.GolemBaseClient.html  struct.GolemBaseClientBuilder.html  struct.GolemBaseRoClient.html  struct.GolemBaseRoClientBuilder.html  struct.NonceManager.html  struct.TransactionConfig.html
golem_base_sdk/entity/: index.html  struct.Annotation.html  struct.Create.html  struct.DeleteResult.html  struct.EncodableGolemBaseTransaction.html  struct.Entity.html  struct.EntityResult.html  struct.Extend.html  struct.ExtendResult.html  struct.GolemBaseTransaction.html  struct.GolemBaseTransactionBuilder.html  struct.TransactionResult.html  struct.Update.html  type.GolemBaseDelete.html  type.Hash.html  type.Key.html  type.NumericAnnotation.html  type.StringAnnotation.html
golem_base_sdk/eth/: constant.STORAGE_ADDRESS.html  enum.Error.html  index.html  sidebar-items.js  struct.GolemBaseStorageEntityBTLExtended.html  struct.GolemBaseStorageEntityCreated.html  struct.GolemBaseStorageEntityDeleted.html  struct.GolemBaseStorageEntityUpdated.html
golem_base_sdk/events/: enum.Event.html  fn.golem_base_storage_entity_created.html  fn.golem_base_storage_entity_deleted.html  fn.golem_base_storage_entity_ttl_extended.html  fn.golem_base_storage_entity_updated.html  index.html  sidebar-items.js  struct.EventsClient.html
golem_base_sdk/rpc/: enum.Error.html  index.html  struct.EntityMetaData.html  struct.SearchResult.html
golem_base_sdk/signers/: struct.GolemBaseSigner.html  struct.InMemorySigner.html  trait.TransactionSigner.html
golem_base_sdk/utils/: fn.eth_to_wei.html  index.html
golem_base_sdk_api/api/: fn.create_entity.html  fn.get_entities.html
golem_base_sdk_demo/: fn.log_num_of_entities_owned.html  fn.main.html  index.html
golem_base_test_utils/: all.html  constant.GOLEM_BASE_URL.html  constant.GOLEM_BASE_WS_URL.html  constant.TEST_KEYSTORE_PASSPHRASE.html  fn.get_client.html  fn.init_logger.html  index.html
repro-simultanous-creates-for-eth-impl/: search-index.js
rvdp/dev/: crates.js  search-index.js  settings.html  src-files.js
rvdp/tx_gas/: crates.js  help.html  settings.html
search.desc/golem_base_sdk/: golem_base_sdk-desc-0-.js
search.desc/golem_base_test_utils/: golem_base_test_utils-desc-0-.js
sol-types-abi-contracts/: search-index.js
sol-types-abi-contracts/golem_base_sdk/: all.html
sol-types-abi-contracts/golem_base_test_utils/: constant.TEST_TTL.html  fn.cleanup_entities.html
src/: account.rs  client.rs  entity.rs  eth.rs  events.rs  lib.rs  resilient_provider.rs  rpc.rs  signers.rs  utils.rs
src/golem_base_sdk/: account.rs.html  client.rs.html  entity.rs.html  eth.rs.html  events.rs.html  lib.rs.html  rpc.rs.html  signers.rs.html
src/golem_base_sdk_demo/: main.rs.html
test-utils/: Cargo.toml
test-utils/golem-base-mock/: Cargo.toml
test-utils/golem-base-mock/src/: api.rs  block.rs  block_builder.rs  blockchain.rs  controller.rs  display.rs  entity_db.rs  events.rs  execution.rs  lib.rs  managed_accounts.rs  query_parser.rs  server.rs  transaction_pool.rs
test-utils/golem-base-mock/tests/: test_golem_base_mock.rs
test-utils/src/: golembase.rs  lib.rs
tests/: test_accounts.rs  test_creation.rs  test_custom_signer.rs  test_entity_operations.rs  test_events.rs  test_query.rs  test_resilient_client.rs  test_sdk.rs  test_transaction_logic.rs
type.impl/alloy_signer_local/: struct.LocalSigner.js
wait-for-transaction/golem_base_test_utils/: fn.cleanup_entities.html  fn.create_test_account.html
(+313 files in other folders)
