[package]
name = "golem-base-sdk"
version = "0.4.0"
edition = "2024"
description = "A Rust SDK for interacting with GolemBase."
license = "GPL-3.0-or-later"

[workspace]
members = ["api", "demo", "test-utils"]
resolver = "2"

[dependencies]
alloy = { version = "1.0", features = ["full", "json-rpc", "signer-local"] }
alloy-json-rpc = "1.0"
alloy-rlp = "0.3"
alloy-sol-types = "1.2"
anyhow = "1.0"
base64 = "0.22"
bigdecimal = "0.4"
bon = "3.6"
bytes = "1.10"
dirs = "6.0"
displaydoc = "0.2"
futures = "0.3"
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
url = "2.5"

[workspace.dependencies]
golem-base-sdk = { path = "." }
golem-base-test-utils = { path = "test-utils" }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
serde_json = "1.0"
serial_test = "3.2"

golem-base-test-utils = { workspace = true }
