[package]
name = "golem-base-sdk-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
dirs = "4.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.2", features = ["derive"] }
actix-web = "4.0"
golem-base-sdk = { workspace = true }
