[package]
name = "golem-base-sdk-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
clap = { version = "4.2", features = ["derive"] }
dirs = "4.0"
golem-base-sdk = { workspace = true }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.0", features = ["full"] }
