[package]
name = "golem-base-sdk-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
golem-base-sdk = { workspace = true }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.45", features = ["full"] }
