[package]
name = "golem-base-cli"
version = "0.1.0"
edition = "2021"
authors = ["Golem Factory"]
description = "CLI tool for interacting with Golem Base"

[dependencies]
anyhow = "1.0"
bigdecimal = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.5"

golem-base-sdk = { workspace = true }
