[package]
name = "golem-base-sdk-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0"
futures = "0.3"
golem-base-sdk = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
