[package]
name = "golem-base-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.15", features = ["full", "json-rpc"] }
anyhow = "1.0"
bigdecimal = "0.4"
env_logger = "0.10"
log = "0.4"
humantime = "2.2"
testcontainers = "0.24"
tokio = { version = "1.0", features = ["time"] }
url = "2"

golem-base-sdk = { workspace = true }
