[package]
name = "golem-base-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.15", features = ["full", "json-rpc"] }
alloy-json-rpc = "0.15"
bytes = "1.0"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
async-trait = "0.1"
rand = "0.8"
golem-base-sdk = { workspace = true }

[dev-dependencies]
golem-base-sdk = { workspace = true }
golem-base-test-utils = { workspace = true }
bigdecimal = "0.4"