[package]
name = "golem-base-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.15", features = ["full", "json-rpc"] }
alloy-json-rpc = "0.15"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
bytes = "1.0"
derive_more = "2.0.1"
hex = "0.4"
humantime = "2.2"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.5"

golem-base-sdk = { workspace = true }

[dev-dependencies]
golem-base-sdk = { workspace = true }
golem-base-test-utils = { workspace = true }
bigdecimal = "0.4"
serial_test = "3.2"
